# multiwebcam

./: README.md  multicam-macOs.py  multiwebcam-linux.cpp  multiwebcam-win10.cpp
multicam-linux-final-version/: CMakeLists.txt  main.cpp
